<resources>
    <string name="app_name">EPM</string>

    <string name="title">EPM Consumables</string>

    <string name="admin_home">Admin Home</string>
    <string name="admin_login">Admin login</string>
    <string name="logout">Logout</string>
    <string name="logistics_out">Logistics Out</string>
    <string name="logistics_in">Logistics In</string>
    <string name="back_press_to_exit">press back again to exit the app</string>
    <string name="back">"Back"</string>

    <string name="err_msg_nointernet">Please check your internet connection</string>
    <string name="note">Note : Input should be of the same format</string>
    <string name="note_format">Refrigerator number/Rack number/material ID</string>
    <string name="ex">Ex : RF11/L01/01</string>
    <string name="name">EPM Consumables Tracking System</string>
    <string name="from_weighing_scale">(From Weighing Scale)</string>
    <string name="weight_quantity">Quantity :</string>
    <string name="step">Step</string>
    <string name="next_item">Next Item</string>
    <string name="re_print">Re-Print</string>
    <string name="print">Print</string>
    <string name="kgs">KGs(From Weighing Scale)</string>
    <string name="pcs">Sheets</string>
    <string name="scanned_rack_id">Scanned Rack ID:</string>
    <string name="settings">Settings</string>

    <string name="err_msg_password">Password field should not be empty</string>
    <string name="err_msg_password_length">Your password must be atleast 8 digits</string>
    <string name="err_msg_name">Enter a valid name</string>
    <string name="output_format">Refrigerator number-Rack number-material ID-FIFO number</string>
    <string name="out_value">Ex : RF01-L01-01-00001</string>
    <string name="enter_ip_address">Enter IP address</string>
    <string name="please_select_one_material_type">Please select one Material Type</string>
    <string name="pale_white_pallets">Pale White Pallets</string>
    <string name="pure_white_pallets">Pure White Pallets</string>
    <string name="black_pallets">Black Pallets</string>
    <string name="mallemine_sheets">Mallemine Sheets</string>
</resources>
