<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:layout_gravity="end"
        android:layout_marginRight="8dp"
        android:contentDescription="TODO"
        android:src="@drawable/bosch"
        android:layout_marginEnd="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/name"
        android:textColor="@color/red"
        android:textSize="22sp"
        android:textStyle="bold" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="8dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="Selected item type :"/>
    <TextView
        android:id="@+id/vT_ali_selected_item_type"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_format"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ex"
            android:textColor="@color/red"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight_quantity"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/vE_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:maxLines="1"
            android:minWidth="66dp"
            android:imeOptions="actionDone"
            android:inputType="numberDecimal"
            android:textColor="@color/red"
            android:textSize="16sp" />
        <TextView
            android:id="@+id/vT_quantity_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kgs"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            />
        <!--<TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_weighing_scale"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:text="@string/scanned_rack_id"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/vE_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="false"
            android:inputType="none"
            android:maxLines="1"
            android:textColor="@color/red" >
            <requestFocus/>
        </EditText>

        <ImageView
            android:id="@+id/vI_cancel"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/ic_cancel"
            android:tint="@color/colorPrimary"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="8dp" />
    </LinearLayout>


    <ProgressBar
        android:id="@+id/vP_al_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/vL_sticker_print_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_print"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/roundeded_button"
            android:text="@string/print"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btn_Step"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="2"
            android:background="@drawable/roundeded_button"
            android:text="@string/step"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/vL_sticker_reprint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:weightSum="3">

        <Button
            android:id="@+id/btn_reprint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/roundeded_button"
            android:text="@string/re_print"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <Button
            android:id="@+id/btn_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/roundeded_button"
            android:text="@string/next_item"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/roundeded_button"
            android:text="@string/step"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/bitmap_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />
        <TextView
            android:id="@+id/vT_display_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="---"/>

    </LinearLayout>



</LinearLayout>