<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vL_am_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="6"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="16dp"
            android:rotation="-10"
            android:scaleType="centerCrop"
            android:text="E"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:padding="16dp"
            android:rotation="30"
            android:scaleType="fitCenter"
            android:text="P"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="16dp"
            android:rotation="0"
            android:scaleType="centerCrop"
            android:text="M"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Consumables Tracking"
        android:textColor="@color/colorAccent"
        android:textSize="32sp" />


    <!-- <ImageView

         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:src="@drawable/epm_logo"
         android:layout_gravity="center"/>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/please_select_one_material_type"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/vRG_category_radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/vRB_palewhite_pallets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/pale_white_pallets"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/vRB_purewhite_pallets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/pure_white_pallets"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />


        <RadioButton
            android:id="@+id/vRB_black_pallets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/black_pallets"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/vRB_mallemine_sheets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:buttonTint="@color/colorPrimaryDark"
            android:text="@string/mallemine_sheets"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp" />


    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <android.support.v7.widget.CardView
            android:id="@+id/vR_am_check_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="86dp"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_effect"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:src="@drawable/load_128p"
                    android:tint="@color/colorPrimaryDark" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:text="Logistics In"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/vR_am_check_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:minHeight="86dp"
            app:cardCornerRadius="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_effect"
                android:orientation="horizontal"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:text="Logistics Out"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_gravity="right"
                    android:src="@drawable/use_128p"
                    android:tint="@color/colorPrimaryDark" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vL_edit_ipaddress_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_weight="1"
        android:gravity="center_vertical|end"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/edit"
            android:tint="@color/dark_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:gravity="center_vertical"
            android:text="Edit IP Address"
            android:textColor="@color/dark_gray"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>