<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LogisticsOutActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/tool_bar" />


        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="56dp"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:contentDescription="TODO"
            android:src="@drawable/bosch" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/name"
            android:textColor="@color/red"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="Selected item type :"/>
            <TextView
                android:id="@+id/vT_alo_selected_item_type"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/output_format"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out_value"
                android:textColor="@color/dark_gray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next item to be scanned"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Pale white pallets:"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vT_next_item_palewhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="--"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Pure whitepallets:"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vT_next_item_purewhite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="--"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Black pallets:"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vT_next_item_black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="--"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Mallemine sheets:"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/vT_next_item_sheets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="--"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_quantity"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/vE_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:minWidth="66dp"
                android:text=""
                android:textColor="@color/red"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/vT_quantity_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kgs"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />

           <!-- <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from_weighing_scale"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                android:textStyle="bold" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/vE_scanned_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:hint="Scan for FIFO number"
                android:textColorHint="@color/dark_gray"
                android:textSize="20sp" >
                <requestFocus/>
            </EditText>

            <ImageView
                android:id="@+id/vI_clear"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginLeft="6dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_cancel"
                android:tint="@color/colorPrimary"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="Recent Scanned number :"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/vT_alo_recent_fifo_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/vP_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminateTint="@color/colorPrimary"
            android:progressTint="@color/colorPrimary"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/vL_status_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/vI_success"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/success"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/vI_error"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/error"
                android:tint="@color/error_red"
                android:visibility="gone" />

            <TextView
                android:id="@+id/vT_status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="24sp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>